
Use system default paper size for printing instead of A4 by default.

Added wx.combo.OwnerDrawnComboBox, which is a ComboCtrl that delegates
the drawing of the items in the popup and in the control itself to
overridden methods of a derived class, similarly to how wx.VListBox
works.

Added wx.combo.BitmapComboBox which is a combobox that displays a
bitmap in front of the list items.





2.7.2.0
-------
* 7-Nov-2006

Patch [ 1583183 ] Fixes printing/print preview inconsistencies

Add events API to wxHtmlWindow (patch #1504493 by Francesco Montorsi)

Added wxTB_RIGHT style for right-aligned toolbars (Igor Korot)

Added New Zealand NZST and NZDT timezone support to wx.DateTime.

wx.Window.GetAdjustedBestSize is deprecated.  In every conceivable
scenario GetEffectiveMinSize is probably what you want to use instead.

wx.Image: Gained support for TGA image file format.

wx.aui: The classes in the wx.aui module have been renamed to be more
consistent with each other, and make it easier to recognize in the
docs and etc. that they belong together.

    FrameManager -->       AuiManager
    FrameManagerEvent -->  AuiManagerEvent
    PaneInfo -->           AuiPaneInfo
    FloatingPane -->       AuiFloatingPane
    DockArt -->            AuiDockArt
    TabArt -->             AuiTabArt
    AuiMultiNotebook -->   AuiNotebook
    AuiNotebookEvent -->   AuiNotebookEvent
       
wx.lib.customtreectrl: A patch from Frame Niessink which adds an
additional style (TR_AUTO_CHECK_PARENT) that (un)checks a parent when
all children are (un)checked.

wx.animate.AnimationCtrl fixed to display inactive bitmap at start
(patch 1590192)

Patch from Dj Gilcrease adding the FNB_HIDE_ON_SINGLE_TAB style flag
for wx.lib.flatnotebook.

wx.Window.GetBestFittingSize has been renamed to GetEffectiveMinSize.
SetBestFittingSize has been renamed to SetInitialSize, since it is
most often used only to set the initial (and minimal) size of a
widget.
